Revert "bug: add workspace_id to query (#20011)"
This reverts commit ef13c3e023918abcee46e5045502d8d83595543e.