@@ -39,6 +39,7 @@ import org.junit.jupiter.api.Test;
 
 class StatePersistenceTest extends BaseConfigDatabaseTest {
 
+  private ConfigRepository configRepository;
   private StatePersistence statePersistence;
   private UUID connectionId;
   private static final String STATE_ONE = "\"state1\"";
@@ -57,7 +58,7 @@ class StatePersistenceTest extends BaseConfigDatabaseTest {
   }
 
   private void setupTestData() throws JsonValidationException, IOException {
-    final ConfigRepository configRepository = new ConfigRepository(
+    configRepository = new ConfigRepository(
         database,
         new ActorDefinitionMigrator(new ExceptionWrappingDatabase(database)),
         new StandardSyncPersistence(database));
@@ -67,14 +68,15 @@ class StatePersistenceTest extends BaseConfigDatabaseTest {
     final SourceConnection sourceConnection = MockData.sourceConnections().get(0);
     final StandardDestinationDefinition destinationDefinition = MockData.publicDestinationDefinition();
     final DestinationConnection destinationConnection = MockData.destinationConnections().get(0);
-    // we don't need sync operations in this test suite, zero them out.
-    final StandardSync sync = Jsons.clone(MockData.standardSyncs().get(0)).withOperationIds(Collections.emptyList());
+    final StandardSync sync = MockData.standardSyncs().get(0);
 
     configRepository.writeStandardWorkspaceNoSecrets(workspace);
     configRepository.writeStandardSourceDefinition(sourceDefinition);
     configRepository.writeSourceConnectionNoSecrets(sourceConnection);
     configRepository.writeStandardDestinationDefinition(destinationDefinition);
     configRepository.writeDestinationConnectionNoSecrets(destinationConnection);
+    configRepository.writeStandardSyncOperation(MockData.standardSyncOperations().get(0));
+    configRepository.writeStandardSyncOperation(MockData.standardSyncOperations().get(1));
     configRepository.writeStandardSync(sync);
 
     connectionId = sync.getConnectionId();
@@ -237,7 +239,7 @@ class StatePersistenceTest extends BaseConfigDatabaseTest {
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
                 .withSharedState(Jsons.deserialize(GLOBAL_STATE))
-                .withStreamStates(List.of(
+                .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
                         .withStreamState(Jsons.deserialize(STATE_TWO))))));
@@ -422,7 +424,7 @@ class StatePersistenceTest extends BaseConfigDatabaseTest {
     assertEquals(
         new StateWrapper()
             .withStateType(StateType.STREAM)
-            .withStateMessages(List.of(
+            .withStateMessages(Arrays.asList(
                 new AirbyteStateMessage()
                     .withType(AirbyteStateType.STREAM)
                     .withStream(new AirbyteStreamState()
